# Python-Playwright-Framework

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yml
swagger-framework/: api_framework_swagger.py  conftest.py  lol.py  swagger_playwright.py  test_api_ui_swagger.py
