[project]
name = "swagger-api-framework"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mikalai-shkuratovich", email = "nikolayshkuratovich@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
    "playwright>=1.41.0",
    "pytest-playwright>=0.4.3",
    "pytest>=7.4.4",
    "Faker>=23.2.1",
    "tree>=0.2.4",
    "tenacity>=8.2.3",
    "asyncio>=3.4.3",
    "pytest-asyncio>=0.23.5",
    "pre-commit>=3.6.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
